# rustler

./: Cargo.toml
rustler/: Cargo.toml
rustler/src/: codegen_runtime.rs  env.rs  lib.rs  resource.rs  schedule.rs  serde.rs  term.rs  wrapper.rs
rustler/src/serde/: atoms.rs  de.rs  error.rs  ser.rs
rustler/src/types/: atom.rs  binary.rs  local_pid.rs  primitive.rs
rustler/src/wrapper/: term.rs
rustler_codegen/src/: context.rs  enum_struct.rs  ex_struct.rs  lib.rs  map.rs  record.rs  tagged_enum.rs  tuple.rs  unit_enum.rs  untagged_enum.rs
rustler_mix/: mix.exs
rustler_mock_rt/: Cargo.toml
rustler_mock_rt/src/: arc.rs  atom.rs  harness.rs  lib.rs  nif_api.rs  string_or_bin.rs  test_bin.rs
rustler_tests/: mix.exs
rustler_tests/lib/: rustler_test.ex
rustler_tests/native/rustler_test/: Cargo.toml
rustler_tests/native/rustler_test/src/: lib.rs  test_codegen.rs  test_serde.rs
rustler_tests/test/: codegen_test.exs  serde_test.exs  test_helper.exs
