[package]
name = "rustler_test"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rustler_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
rustler = { path = "../../../rustler" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-transcode = "1.1"
